# jobsearch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODOLIST.txt  docker-entrypoint.sh  nest-cli.json  package-lock.json  package.json  pyproject.toml  starting_prompt.txt  supervisord.conf
.github/workflows/: deploy-hf.yml  job-search.yml  keep-alive.yml
agents/: database.py  generate_agent.py  interviewer_agent.py  jobs_agent.py  main.py  pdf_agent.py  profile_agent.py  run_search.py  search_agent.py
agents/sources/: arbeitnow.py  builtin.py  ddg.py  dice.py  google_pw.py  indeed.py  indeed_rss.py  linkedin.py  remote100k.py  remoteok.py  remoterocketship.py  remotive.py  wellfound.py  weworkremotely.py
agents/templates/: company_brief.html  cover_letter.html  interview_questions.html  resume.html
frontend/: index.html  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AddJobModal.vue  BottomNav.vue  CandidateDetailModal.vue  GenerateKitPanel.vue  JobCard.vue  JobDetailModal.vue  KanbanBoard.vue  KanbanColumn.vue  Navbar.vue  RichTextEditor.vue  SuggestionCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  interviewer.ts  pipeline.ts  profile.ts  suggestions.ts
frontend/src/views/: InterviewerProjectView.vue  InterviewerProjectsView.vue  (+5 more)
scripts/: gen-icons.js
search_results/1/: 2026-06-25.json
services/gateway/: tsconfig.app.json
shared/: init-db.js  init-pg.js  init.sql  schema.pg.sql
(+26 files in other folders)
