[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-lantern-agents"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "jinja2>=3.1.0",
    "markdown>=3.6",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.1.0",
    "playwright>=1.44.0",
    "feedparser>=6.0.11",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["agents*"]
